--- a/src/components/cards/textCard/TextCard.css
+++ b/src/components/cards/textCard/TextCard.css
@@ -1,5 +1,27 @@
-.card {
-    box-shadow: var(--shadow-default);
-    width: min(300px, 90%);
-    outline: none;
+.textCard {
+  box-shadow: var(--shadow-default);
+  width: min(300px, 90%);
+  outline: none;
+  border-radius: var(--border-radius);
+  padding: 1rem;
+}
+
+.heading {
+  font-size: var(--heading-default);
+  font-weight: 500;
+}
+
+.subHeading {
+  color: rgba(0, 0, 0, 0.54);
+  font-size: var(--sabHeading-default);
+  margin-top: 0.375rem;
+}
+
+.cardContent {
+  margin-top: 1rem;
+  text-align: justify;
+}
+
+.cardBtn {
+  margin-top: 1rem;
 }
