--- a/src/components/cards/imageCard/ImageCard.css
+++ b/src/components/cards/imageCard/ImageCard.css
@@ -1,25 +1,29 @@
-.textCard {
+.imageCard {
   box-shadow: var(--shadow-default);
   width: var(--default-card-width);
   outline: none;
   border-radius: var(--border-radius);
-  padding: 1rem;
 }
 
 .heading {
   font-size: var(--heading-default);
   font-weight: 500;
+  padding: 1rem 1rem 0rem;
 }
 
 .subHeading {
   color: rgba(0, 0, 0, 0.54);
   font-size: var(--sabHeading-default);
   margin-top: 0.375rem;
+  padding: 0rem 1rem 1rem;
+}
+
+.curvedCardImg {
+  border-top-left-radius: var(--border-radius);
+  border-top-right-radius: var(--border-radius);
 }
 
 .cardContent {
-  margin: 1rem 0rem;
-  text-align: justify;
   cursor: pointer;
 }
 
@@ -27,6 +31,11 @@
   background-color: var(--card-hover);
 }
 
+.imageCard-text {
+  padding: 1rem;
+  text-align: justify;
+}
+
 .cardBtn {
-  margin-top: 1rem;
+  margin: 1rem;
 }
