--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@
   --border-radius: 0.25rem;
   --default-card-width: min(400px, 90%);
   --card-hover: #f7f7f7;
+  --disabled-text: rgba(0, 0, 0, 0.34);
+  --disabled-default-bg: rgba(0, 0, 0, 0.08)
 }
 
 * {
