--- a/src/components/buttons/buttonCTA/Button.css
+++ b/src/components/buttons/buttonCTA/Button.css
@@ -31,17 +31,27 @@
 }
 
 .primary-outlined {
-    border: 1px solid var(--primary-color-text);
-    color: var(--primary-color-text);
-    background-color: var(--secondary-color);
+  border: 1px solid var(--primary-color-text);
+  color: var(--primary-color-text);
+  background-color: var(--secondary-color);
+  font-size: 1rem;
+  font-weight: 500;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  border-radius: var(--border-radius);
+  box-shadow: var(--shadow-default);
+}
+
+.primary-outlined:hover {
+  background-color: var(--card-hover);
+}
+
+.disabled {
+    color: var(--disabled-text);
+    background-color: var(--disabled-default-bg);
     font-size: 1rem;
     font-weight: 500;
     padding: 0.5rem 1rem;
-    cursor: pointer;
     border-radius: var(--border-radius);
-    box-shadow: var(--shadow-default);
-  }
-  
-  .primary-outlined:hover {
-    background-color: var(--card-hover);
-  }
+    border: none;
+}
