--- a/components/component_page/avatar.html
+++ b/components/component_page/avatar.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="vidhi thakur" />
+    <link rel="stylesheet" href="../component_style/avatar.css" />
+    <link rel="stylesheet" href="../../styles/variable.css" />
     <title>Avatar | Savvy UI</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Avatar rendered here</h1>
-</body>
+
+    <section class="avatar-box">
+      <div class="avatar avatar-xs-size">
+        <img
+          src="https://avatars.dicebear.com/api/adventurer/vidhi97.svg"
+          alt="avatar"
+        />
+      </div>
+
+      <div class="avatar avatar-sm-size">
+        <img
+          src="https://avatars.dicebear.com/api/adventurer/vidhi97.svg"
+          alt="avatar"
+        />
+      </div>
+
+      <div class="avatar avatar-md-size">
+        <img
+          src="https://avatars.dicebear.com/api/adventurer/vidhi97.svg"
+          alt="avatar"
+        />
+      </div>
+
+      <div class="avatar avatar-lg-size">
+        <img
+          src="https://avatars.dicebear.com/api/adventurer/vidhi97.svg"
+          alt="avatar"
+        />
+      </div>
+    </section>
+  </body>
 </html>
