--- a/components/component_style/avatar.css
+++ b/components/component_style/avatar.css
@@ -8,6 +8,8 @@
   border-radius: var(--round-border);
   display: flex;
   align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
 .avatar img {
@@ -31,3 +33,66 @@
   width: 5.5rem;
   height: 5.5rem;
 }
+
+/* text avatar font size */
+
+.avatar-xs-text {
+  font-size: 0.7rem;
+}
+
+.avatar-sm-text {
+  font-size: 1rem;
+}
+
+.avatar-md-text {
+  font-size: 1.5rem;
+}
+
+.avatar-lg-text {
+  font-size: 2rem;
+}
+
+/* avatar with status badge */
+
+.avatar-badge {
+    position: absolute;
+    border-radius: var(--round-border);
+    border: 2px solid white;
+}
+
+.avatar-xs-badge {
+    width: 0.10rem;
+    height: 0.10rem;
+    padding: 0.25rem 0.25rem;
+    top: 1.25rem;
+    left: 1.4rem;
+}
+
+.avatar-sm-badge {
+    width: 0.15rem;
+    height: 0.15rem;
+    padding: 0.25rem 0.25rem;
+    top: 1.6rem;
+    left: 2.1rem;
+}
+
+.avatar-md-badge {
+    width: 0.3rem;
+    height: 0.3rem;
+    padding: 0.25rem 0.25rem;
+    top: 3rem;
+    left: 3.5rem;
+}
+
+.avatar-lg-badge {
+    width: 0.45rem;
+    height: 0.45rem;
+    padding: 0.25rem 0.25rem;
+    top: 3.6rem;
+    left: 4.4rem;
+}
+
+.avatar-online {
+    background-color: var(--active-color);
+}
+
