completed text with badge with primary & secondary color

--- a/components/component_page/badge.html
+++ b/components/component_page/badge.html
@@ -14,29 +14,23 @@
     <h3>Badge with text</h3>
 
     <section>
-        <div>
-            <h1>Sed ut perspiciatis unde omnis iste natus</h1>
-            <span>New</span>
+        <div class="badge-container">
+            <h1>Sed ut perspiciatis unde omnis iste natus <span class="badge badge-primary-contained">New</span></h1>
         </div>
-        <div>
-            <h2>Sed ut perspiciatis unde omnis iste natus</h2>
-            <span>New</span>
+        <div class="badge-container">
+            <h2>Sed ut perspiciatis unde omnis iste natus <span class="badge badge-primary-outlined">New</span></h2>
         </div>
-        <div>
-            <h3>Sed ut perspiciatis unde omnis iste natus</h3>
-            <span>New</span>
+        <div class="badge-container">
+            <h3>Sed ut perspiciatis unde omnis iste natus <span class="badge badge-primary-contained">New</span></h3>
         </div>
-        <div>
-            <h4>Sed ut perspiciatis unde omnis iste natus</h4>
-            <span>New</span>
+        <div class="badge-container">
+            <h4>Sed ut perspiciatis unde omnis iste natus <span class="badge badge-secondary-contained">New</span></h4>
         </div>
-        <div>
-            <p>Sed ut perspiciatis unde omnis iste natus</p>
-            <span>New</span>
+        <div class="badge-container">
+            <p>Sed ut perspiciatis unde omnis iste natus <span class="badge badge-secondary-outlined">New</span></p>
         </div>
-        <div>
-            <small>Sed ut perspiciatis unde omnis iste natus</small>            
-            <span>New</span>
+        <div class="badge-container">
+            <small>Sed ut perspiciatis unde omnis iste natus <span class="badge badge-primary-outlined">New</span></small>            
         </div>
     </section>
 </body>
