--- a/components/component_page/badge.html
+++ b/components/component_page/badge.html
@@ -30,9 +30,46 @@
             <p>Sed ut perspiciatis unde omnis iste natus <span class="badge badge-secondary-outlined">New</span></p>
         </div>
         <div class="badge-container">
-            <small>Sed ut perspiciatis unde omnis iste natus <span class="badge badge-primary-outlined">New</span></small>            
+            <small>Sed ut perspiciatis unde omnis iste natus <span
+                    class="badge badge-primary-outlined">New</span></small>
+        </div>
+    </section>
+
+    <section>
+        <h3>Badge with icons</h3>
+
+        <div class="badge-container">
+            <i class="fas fa-cart-plus"></i><span
+                class="badge status-badge badge-primary-contained badge-round sm-badge">9</span>
+        </div>
+
+        <div class="badge-container">
+            <i class="fas fa-cart-plus"></i><span
+                class="badge status-badge badge-secondary-contained badge-round sm-badge">9</span>
+        </div>
+        
+        <div class="badge-container">
+            <i class="fas fa-cart-plus"></i><span class="badge status-badge badge-primary-outlined badge-round sm-badge">9</span>
+        </div>
+        
+        <div class="badge-container">
+            <i class="fas fa-cart-plus"></i><span class="badge status-badge badge-secondary-outlined badge-round sm-badge">1</span>
+        </div>
+    </section>
+
+    <section>
+        <h3>Icons as badge</h3>
+
+        <div class="badge-container">
+            <i class="fas fa-cart-plus badge icon-badge badge-round"></i>
+        </div>
+        
+        <div class="badge-container">
+            <i class="fas fa-cart-plus badge icon-badge"></i>
         </div>
     </section>
 </body>
+
+<script src="https://kit.fontawesome.com/ba1ac74ca9.js" crossorigin="anonymous"></script>
 
 </html>
