--- a/components/component_style/badge.css
+++ b/components/component_style/badge.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     margin-top: var(--md-spacing);
+    position: relative;
 }
 
 .badge-container span {
@@ -27,17 +28,41 @@
 }
 
 .badge-secondary-contained {
-    background-color: var(--secondary-color-dark-shade3);
+    background-color: var(--secondary-color);
     color: white;
-    border: 2px solid var(--secondary-color-dark-shade3);
+    border: 2px solid var(--secondary-color);
 }
 
 .badge-secondary-outlined {
-    color: var(--secondary-color-dark-shade3);
-    border: 2px solid var(--secondary-color-dark-shade3);
+    color: var(--secondary-color);
+    border: 2px solid var(--secondary-color);
     background-color: white;
 }
 
 .badge-round {
     border-radius: var(--round-border);
+}
+
+.sm-badge {
+    padding: 0rem var(--xs-spacing);
+    font-size: var(--sm-font);
+}
+
+.status-badge {
+    min-height: 1rem;
+    min-width: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    cursor: pointer;
+}
+
+.icon-badge {
+    background-color: white;
+    color: var(--primary-color-dark-shade3);
+    padding: var(--sm-spacing);
+    box-shadow: var(--default-shadow);
 }
