completed card component

--- a/components/component_page/avatar.html
+++ b/components/component_page/avatar.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="vidhi thakur" />
-    <link rel="stylesheet" href="../component_style/avatar.css" />
-    <link rel="stylesheet" href="../../styles/variable.css" />
+    <link rel="stylesheet" href="../../styles/main.css" />
+    <meta name="author" content="vidhi thakur" />
     <title>Avatar | Savvy UI</title>
   </head>
   <body>
