--- a/components/component_style/button.css
+++ b/components/component_style/button.css
@@ -1,14 +1,10 @@
-div,section {
-    margin-top: var(--sm-spacing);
-    margin-left: var(--sm-spacing);
-}
-
 .btn {
     padding: var(--btn-padding);
     cursor: pointer;
     text-transform: uppercase;
     font-weight: var(--bold-font-weight);
     border-radius: var(--default-border);
+    margin: var(--default-spacing);
 }
 
 .btn-primary-contained {
@@ -26,7 +22,6 @@ div,section {
     border: 2px solid var(--primary-color);
     background-color: white;
     color: var(--primary-color);
-    box-shadow: var(--default-shadow);
 }
 
 .btn-primary-outlined:hover {
@@ -35,7 +30,7 @@ div,section {
 
 .btn-primary-text {
     color: var(--primary-color);
-    border: 2px solid white;
+    border: 2px solid transparent;
     background-color: transparent;
 }
 
@@ -46,7 +41,7 @@ div,section {
 
 .btn-primary-link {
     color: var(--primary-color);
-    border: 2px solid white;
+    border: 2px solid transparent;
     background-color: transparent;
 }
 
