--- a/components/component_page/button.html
+++ b/components/component_page/button.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Button | Savvy UI</title>
-    <link rel="stylesheet" href="../component_style/button.css">
-    <link rel="stylesheet" href="../../styles/variable.css" />
+    <meta name="author" content="vidhi thakur" />
+    <link rel="stylesheet" href="../../styles/main.css" />
 </head>
 
 <body>
