completed alert component

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,3 +7,4 @@
 @import '../components/component_style/badge.css';
 @import '../components/component_style/button.css';
 @import '../components/component_style/card.css';
+@import '../components//component_style//alert.css';
