--- a/styles/variable.css
+++ b/styles/variable.css
@@ -12,6 +12,9 @@
   --warning-light-color: #ffe7c5;
   --warning-dark-color: #ff9204;
 
+  --information-light-color: #7FD2E6;
+  --information-dark-color: #29438b;
+
   --active-color: #1b7052;
   --inactive-color: #dc3545;
 
