--- a/components/component_page/alert.html
+++ b/components/component_page/alert.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alert | Savvy UI</title>
     <link rel="stylesheet" href="../../styles/main.css" />
+    <meta name="author" content="vidhi thakur" />
 </head>
 
 <body>
