added lazy loading to the images

--- a/components/component_page/image.html
+++ b/components/component_page/image.html
@@ -15,7 +15,7 @@
         <h3>simple image with spacing and shadow</h3>
 
         <div class="image-container">
-            <img class="image"
+            <img loading="lazy" class="image"
                 src="https://wallup.net/wp-content/uploads/2016/03/10/326032-photography-nature-plants-trees-landscape-road-Sun-summer.jpg"
                 alt="landscape" />
         </div>
@@ -23,7 +23,7 @@
     <section class="mb-1">
         <h3>round image</h3>
 
-        <img class="image image-round"
+        <img loading="lazy" class="image image-round"
             src="https://wallup.net/wp-content/uploads/2016/03/10/326032-photography-nature-plants-trees-landscape-road-Sun-summer.jpg"
             alt="landscape" />
     </section>
