completed input components

--- a/styles/main.css
+++ b/styles/main.css
@@ -9,3 +9,4 @@
 @import '../components/component_style/card.css';
 @import '../components/component_style/alert.css';
 @import '../components/component_style/image.css';
+@import '../components/component_style/input.css';
