--- a/components/component_page/input.html
+++ b/components/component_page/input.html
@@ -39,7 +39,7 @@
     </section>
 
     <section class="mb-1">
-        <h3>textarea field</h3>
+        <h3>disabled inputs</h3>
 
         <div class="mb-1 input-container">
             <label for="input">Enter email: </label>
