--- a/styles/main.css
+++ b/styles/main.css
@@ -10,3 +10,4 @@
 @import '../components/component_style/alert.css';
 @import '../components/component_style/image.css';
 @import '../components/component_style/input.css';
+@import '../components/component_style/navbar.css'
