--- a/components/component_style/avatar.css
+++ b/components/component_style/avatar.css
@@ -14,6 +14,8 @@
 
 .avatar img {
   border-radius: inherit;
+  width: 100%;
+  height: 100%;
 }
 
 .avatar-xs-size {
@@ -22,8 +24,8 @@
 }
 
 .avatar-sm-size {
-  width: 2.7rem;
-  height: 2.7rem;
+  width: 3.3rem;
+  height: 3.3rem;
 }
 .avatar-md-size {
   width: 4.5rem;
