--- a/styles/misc.css
+++ b/styles/misc.css
@@ -1,11 +1,28 @@
+/* custom border radius */
 .br-inherit {
     border-radius: inherit;
 }
 
+/* custom opacity */
 .opacity-05 {
     opacity: 0.5;
 }
 
+.opacity-07 {
+    opacity: 0.7;
+}
+
+/* custom cursor */
 .cursor-auto {
     cursor: auto;
+}
+
+/* custom shadow */
+.shadow-none {
+    box-shadow: none !important;
+}
+
+/* custom position */
+.position-rel {
+    position: relative;
 }
