--- a/styles/main.css
+++ b/styles/main.css
@@ -10,4 +10,5 @@
 @import '../components/component_style/alert.css';
 @import '../components/component_style/image.css';
 @import '../components/component_style/input.css';
-@import '../components/component_style/navbar.css'
+@import '../components/component_style/navbar.css';
+@import '../components/component_style/toast.css';
