--- a/styles/misc.css
+++ b/styles/misc.css
@@ -17,6 +17,10 @@
     cursor: auto;
 }
 
+.cursor-pointer {
+    cursor: pointer;
+}
+
 /* custom shadow */
 .shadow-none {
     box-shadow: none !important;
