completed rating component

--- a/styles/main.css
+++ b/styles/main.css
@@ -12,3 +12,4 @@
 @import '../components/component_style/input.css';
 @import '../components/component_style/navbar.css';
 @import '../components/component_style/toast.css';
+@import '../components/component_style/rating.css';
