updated class name for avatar size

--- a/components/component_page/avatar.html
+++ b/components/component_page/avatar.html
@@ -12,28 +12,28 @@
   <body>
     <h3>avatars with images</h3>
     <section class="avatar-box">
-      <div class="avatar avatar-xs-size">
+      <div class="avatar avatar-xs">
         <img
           src="https://avatars.dicebear.com/api/adventurer/vidhi97.svg"
           alt="avatar"
         />
       </div>
 
-      <div class="avatar avatar-sm-size">
+      <div class="avatar avatar-sm">
         <img
           src="https://avatars.dicebear.com/api/adventurer/vidhi97.svg"
           alt="avatar"
         />
       </div>
 
-      <div class="avatar avatar-md-size">
+      <div class="avatar avatar-md">
         <img
           src="https://avatars.dicebear.com/api/adventurer/vidhi97.svg"
           alt="avatar"
         />
       </div>
 
-      <div class="avatar avatar-lg-size">
+      <div class="avatar avatar-lg">
         <img
           src="https://avatars.dicebear.com/api/adventurer/vidhi97.svg"
           alt="avatar"
@@ -43,18 +43,18 @@
 
     <h3>avatar with text</h3>
     <section class="avatar-box">
-      <div class="avatar avatar-xs-size avatar-xs-text">VT</div>
+      <div class="avatar avatar-xs avatar-xs-text">VT</div>
 
-      <div class="avatar avatar-sm-size avatar-sm-text">VT</div>
+      <div class="avatar avatar-sm avatar-sm-text">VT</div>
 
-      <div class="avatar avatar-md-size avatar-md-text">VT</div>
+      <div class="avatar avatar-md avatar-md-text">VT</div>
 
-      <div class="avatar avatar-lg-size avatar-lg-text">VT</div>
+      <div class="avatar avatar-lg avatar-lg-text">VT</div>
     </section>
 
     <h3>avatar with status badge</h3>
     <section class="avatar-box">
-      <div class="avatar avatar-xs-size">
+      <div class="avatar avatar-xs">
         <img
           src="https://avatars.dicebear.com/api/adventurer/thakur.svg"
           alt="avatar"
@@ -62,7 +62,7 @@
         <span class="avatar-xs-badge avatar-badge avatar-online"></span>
       </div>
 
-      <div class="avatar avatar-sm-size">
+      <div class="avatar avatar-sm">
         <img
           src="https://avatars.dicebear.com/api/adventurer/thakur.svg"
           alt="avatar"
@@ -70,7 +70,7 @@
         <span class="avatar-sm-badge avatar-badge avatar-online"></span>
       </div>
 
-      <div class="avatar avatar-md-size">
+      <div class="avatar avatar-md">
         <img
           src="https://avatars.dicebear.com/api/adventurer/thakur.svg"
           alt="avatar"
@@ -78,7 +78,7 @@
         <span class="avatar-md-badge avatar-badge avatar-online"></span>
       </div>
 
-      <div class="avatar avatar-lg-size">
+      <div class="avatar avatar-lg">
         <img
           src="https://avatars.dicebear.com/api/adventurer/thakur.svg"
           alt="avatar"
