--- a/components/component_style/avatar.css
+++ b/components/component_style/avatar.css
@@ -18,20 +18,20 @@
   height: 100%;
 }
 
-.avatar-xs-size {
+.avatar-xs {
   width: 2rem;
   height: 2rem;
 }
 
-.avatar-sm-size {
+.avatar-sm {
   width: 3.3rem;
   height: 3.3rem;
 }
-.avatar-md-size {
+.avatar-md {
   width: 4.5rem;
   height: 4.5rem;
 }
-.avatar-lg-size {
+.avatar-lg {
   width: 5.5rem;
   height: 5.5rem;
 }
