added a form component in component library & added checkbox input

--- a/components/component_page/input.html
+++ b/components/component_page/input.html
@@ -30,11 +30,13 @@
 
         <div class="mb-1 input-container">
             <label for="input">Enter message: </label>
-            <textarea class="input" id="textarea-input" name="textarea-input" rows="4" cols="50" placeholder="enter your message"></textarea>
+            <textarea class="input" id="textarea-input" name="textarea-input" rows="4" cols="50"
+                placeholder="enter your message"></textarea>
         </div>
         <div class="mb-1 input-container">
             <label for="input">Enter message: </label>
-            <textarea class="input input-error" id="textarea-input" name="textarea-input" rows="4" cols="50" placeholder="enter your message"></textarea>
+            <textarea class="input input-error" id="textarea-input" name="textarea-input" rows="4" cols="50"
+                placeholder="enter your message"></textarea>
         </div>
     </section>
 
@@ -47,7 +49,16 @@
         </div>
         <div class="mb-1 input-container">
             <label for="input">Enter message: </label>
-            <textarea disabled="disabled" class="input" id="textarea-input" name="textarea-input" rows="4" cols="50" placeholder="enter your message"></textarea>
+            <textarea disabled="disabled" class="input" id="textarea-input" name="textarea-input" rows="4" cols="50"
+                placeholder="enter your message"></textarea>
+        </div>
+    </section>
+
+    <section class="mb-1">
+        <h3>checkbox inputs</h3>
+
+        <div class="mb-1 checkbox input-container ">
+            <input id="checkbox-input" type="checkbox" /><label for="checkbox-input">Remember me</label>
         </div>
     </section>
 </body>
