--- a/styles/main.css
+++ b/styles/main.css
@@ -13,3 +13,4 @@
 @import '../components/component_style/navbar.css';
 @import '../components/component_style/toast.css';
 @import '../components/component_style/rating.css';
+@import '../components/component_style/form.css';
