--- a/components/component_style/input.css
+++ b/components/component_style/input.css
@@ -8,6 +8,7 @@
 .input-container {
   display: flex;
   flex-direction: column;
+  gap: var(--sm-spacing);
   width: 100%;
   padding: 0 var(--default-spacing);
 }
