form component updates
- added a class `checkbox-input` for checkbox input
- added `width` for browsers that don't support webkit

--- a/components/component_page/input.html
+++ b/components/component_page/input.html
@@ -58,7 +58,7 @@
         <h3>checkbox inputs</h3>
 
         <div class="mb-1 checkbox input-container ">
-            <input id="checkbox-input" type="checkbox" /><label for="checkbox-input">Remember me</label>
+            <input class="checkbox-input" id="checkbox-input" type="checkbox" /><label for="checkbox-input">Remember me</label>
         </div>
     </section>
 </body>
