added padding to the body in input page

--- a/components/component_page/input.html
+++ b/components/component_page/input.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../styles/main.css" />
 </head>
 
-<body>
+<body class="p-1">
 
     <section class="mb-1">
         <h3>input field</h3>
