--- a/components/component_page/navbar.html
+++ b/components/component_page/navbar.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- navbar for e-comm -->
     <nav class="nav">
         <div class="avatar avatar-sm">
             <img src="../../assets/images/ECom-logo.svg" alt="avatar" />
@@ -32,6 +33,32 @@
             <span class="position-rel nav-icon-box">
                 <i class="fas fa-cart-plus nav-icon"></i><span
                     class="badge status-badge badge-primary-contained badge-round sm-badge">9</span>
+            </span>
+        </div>
+    </nav>
+
+    <!-- navbar for doc -->
+    <nav class="nav mt-1">
+        <div class="nav-LHS">
+            <h1 class="nav-brandName p-1">Savvy UI</h1>
+            <div class="nav-pages">
+                <a href="/">
+                    <span class="page active-page">Installation</span>
+                </a>
+                <a href="/">
+                    <span class="ml-05 page">Docs</span>
+                </a>
+            </div>
+        </div>
+        <div class="nav-links">
+            <span class="position-rel nav-icon-box">
+                <i class="fa fa-github nav-icon profile-icon" aria-hidden="true"></i>
+            </span>
+            <span class="position-rel nav-icon-box">
+                <i class="fa fa-linkedin nav-icon profile-icon" aria-hidden="true"></i>
+            </span>
+            <span class="position-rel nav-icon-box">
+                <i class="fa fa-twitter nav-icon profile-icon" aria-hidden="true"></i>
             </span>
         </div>
     </nav>
