--- a/components/component_style/navbar.css
+++ b/components/component_style/navbar.css
@@ -59,4 +59,26 @@
   }
 }
 
+.nav-LHS {
+  display: flex;
+  align-items: center;
+  gap: var(--md-spacing);
+}
 
+.page {
+  opacity: 0.85;
+  font-weight: 600;
+}
+
+.page:hover {
+  color: var(--primary-color);
+  opacity: 1!important;
+}
+
+.profile-icon {
+  font-size: large;
+}
+
+.profile-icon:hover {
+  color: var(--primary-color);
+}
