--- a/components/component_page/navbar.html
+++ b/components/component_page/navbar.html
@@ -35,6 +35,32 @@
             </span>
         </div>
     </nav>
+
+    <!-- navbar for doc -->
+    <nav class="nav mt-1">
+        <div class="nav-LHS">
+            <h1 class="nav-brandName p-1">Savvy UI</h1>
+            <div class="nav-pages">
+                <a href="/">
+                    <span class="page active-page">Installation</span>
+                </a>
+                <a href="/">
+                    <span class="ml-05 page">Docs</span>
+                </a>
+            </div>
+        </div>
+        <div class="nav-links nav-profile-icons">
+            <span class="position-rel nav-icon-box">
+                <i class="fa fa-github nav-icon profile-icon" aria-hidden="true"></i>
+            </span>
+            <span class="position-rel nav-icon-box">
+                <i class="fa fa-linkedin nav-icon profile-icon" aria-hidden="true"></i>
+            </span>
+            <span class="position-rel nav-icon-box">
+                <i class="fa fa-twitter nav-icon profile-icon" aria-hidden="true"></i>
+            </span>
+        </div>
+    </nav>
 </body>
 <script src="https://kit.fontawesome.com/ba1ac74ca9.js" crossorigin="anonymous"></script>
 
