added basic structure to landing page

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,16 +1,17 @@
-@import './reset.css';
-@import './variable.css';
-@import './margin.css';
-@import './padding.css';
-@import './misc.css';
-@import '../components/component_style/avatar.css';
-@import '../components/component_style/badge.css';
-@import '../components/component_style/button.css';
-@import '../components/component_style/card.css';
-@import '../components/component_style/alert.css';
-@import '../components/component_style/image.css';
-@import '../components/component_style/input.css';
-@import '../components/component_style/navbar.css';
-@import '../components/component_style/toast.css';
-@import '../components/component_style/rating.css';
-@import '../components/component_style/form.css';
+@import "./reset.css";
+@import "./variable.css";
+@import "./margin.css";
+@import "./padding.css";
+@import "./misc.css";
+@import "./index.css";
+@import "../components/component_style/avatar.css";
+@import "../components/component_style/badge.css";
+@import "../components/component_style/button.css";
+@import "../components/component_style/card.css";
+@import "../components/component_style/alert.css";
+@import "../components/component_style/image.css";
+@import "../components/component_style/input.css";
+@import "../components/component_style/navbar.css";
+@import "../components/component_style/toast.css";
+@import "../components/component_style/rating.css";
+@import "../components/component_style/form.css";
