--- a/styles/padding.css
+++ b/styles/padding.css
@@ -6,6 +6,17 @@
     padding: 0.5rem;
 }
 
+/* padding top */
+.pt-1 {
+    padding-top: 1rem;
+}
+
+/* padding left */
+.pl-2 {
+    padding-left: 2rem;
+}
+
+/* padding bottom */
 .pb-1 {
     padding-bottom: 1rem;
 }
