--- a/styles/margin.css
+++ b/styles/margin.css
@@ -2,6 +2,10 @@
     margin: 1rem;
 }
 
+.m-auto {
+    margin: auto;
+}
+
 /* margin right */
 .mr-05 {
     margin-right: 0.5rem;
@@ -14,6 +18,10 @@
 
 .ml-05 {
     margin-left: 0.5rem;
+}
+
+.ml-1 {
+    margin-left: 1rem;
 }
 
 .ml-2 {
