adding radio input

--- a/components/component_page/input.html
+++ b/components/component_page/input.html
@@ -61,6 +61,14 @@
             <input class="checkbox-input" id="checkbox-input" type="checkbox" /><label for="checkbox-input">Remember me</label>
         </div>
     </section>
+
+    <section class="mb-1">
+        <h3>radio inputs</h3>
+
+        <div class="mb-1 radio input-container ">
+            <input class="radio-input" id="radio-input" type="radio" /><label for="radio-input">Remember me</label>
+        </div>
+    </section>
 </body>
 
 </html>
