--- a/components/component_style/input.css
+++ b/components/component_style/input.css
@@ -25,13 +25,13 @@
   border: 0.125rem solid var(--danger-dark-color);
 }
 
-.checkbox {
+.checkbox, .radio {
   flex-direction: row;
   align-items: center;
   gap: 0.5rem;
   width: fit-content;
 }
 
-.checkbox-input, .checkbox > label {
+.checkbox-input, .radio-input, .checkbox > label, .radio > label {
   cursor: pointer;
 }
