added basic structure for doc

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,7 @@
 @import "./padding.css";
 @import "./misc.css";
 @import "./index.css";
+@import "./documentation.css";
 @import "../components/component_style/avatar.css";
 @import "../components/component_style/badge.css";
 @import "../components/component_style/button.css";
