updated components - avatar & badge

--- a/styles/documentation.css
+++ b/styles/documentation.css
@@ -16,3 +16,19 @@
     border-radius: var(--default-border);
     background-color: var(--basic-bg);
 }
+
+.component-code > iframe {
+    width: 100%;
+    max-height: 15rem;
+    overflow-y: auto;
+}
+
+.component-code {
+    text-align: center;
+}
+
+.example-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
