created a simple footer

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,3 +16,4 @@
 @import "../components/component_style/toast.css";
 @import "../components/component_style/rating.css";
 @import "../components/component_style/form.css";
+@import "../components/component_style/footer.css";
