created component for modal

--- a/styles/main.css
+++ b/styles/main.css
@@ -17,3 +17,4 @@
 @import "../components/component_style/rating.css";
 @import "../components/component_style/form.css";
 @import "../components/component_style/footer.css";
+@import "../components/component_style/modal.css";
